fix: saito-calendar date alignemnt

--- a/web/saito/css-imports/saito-calendar.css
+++ b/web/saito/css-imports/saito-calendar.css
@@ -76,6 +76,7 @@
     font-size: 1.2rem;
     padding: 3px;
     background-color: #fcfcfc;
+    text-align: center;
 }
 
 .saito-calendar-days div:hover {
